Version next

Version 2014.02.18.00b
* Improve fullscreen HTML5 video detection (fix on YouTube).
* Update license to MPL 2.0.
* Update locales for new strings.
* Updated translations for: sr

Version 2014.01.29.16b
* Add advanced option to hide status popup on fullscreen HTML5 video.
* Fix JS Download API integration.
* Fix status/add-on bar item placement regression from Australis support.
* Updated translations for: ro

Version 2014.01.25.23b
* Initial Australis support.
* Drop support for Firefox 23.0 and older.
* Classic download manager is not available in Firefox 26.0 and newer.

Version 2013.10.31.22
* Updated translations for: es-ES, he

Version 2013.09.14.22b
* Don't use Firefox 22 JavaScript syntax in new Downloads implementation.

Version 2013.09.14.15b
* Support new Downloads.jsm API in Firefox 26+.
* Support UI changes in Firefox 26.
* Update locales for new strings.
* Updated translations for: en-US, pl, sr

Version 2013.05.14.21b
* Fix sticky extension status messages. Instead of simply hiding the status text, actually clear the saved status messages.
* Fix download button panel when the S4E download button is not present on a toolbar.
* Update locales for new strings.
* Updated translations for: el, es-ES, he, ja-JP, tr, zh-TW

Version 2013.05.12.17b
* Add option to control the download button action (Firefox default / panel / library / classic window).
* Add an option to disable the download complete animation.
* Add an option to automatically clear the download complete button highlight.
* Do not highlight the download button if the panel/library/window is already open.

Version 2013.02.16.23
* Fix potential incorrect formatting of the location bar status display after clicking on a link.
* Fix RTL locale support.
* Updated translations for: de, nb-NO, sr, sv-SE, zh-TW

Version 2013.01.16.00b
* Drop support for Firefox 16.0 and older.
* Fix protocol hiding in the toolbar and pop-up.
* Update location bar progress styling.