@@ -1,4 +1,5 @@
 Version next
+* Fix toolbars overlapping download finished animation.
 
 Version 2014.02.18.00b
 * Improve fullscreen HTML5 video detection (fix on YouTube).
